<resources>
    <string name="app_name">Productos</string>
    <string name="label_login">Iniciar sesión</string>
    <string name="usuario">Escribe tu correo</string>
    <string name="usuario2">Escribe tu usuario</string>
    <string name="headerubi">Tus coordenadas</string>
    <string name="coordenadas">Coordenadas</string>
    <string name="nombre">Usuario</string>
    <string name="fechaprestamo">Fecha préstamo</string>
    <string name="fechadevuelto">Fecha de devolución</string>
    <string name="comentario">Comentarios</string>
    <string name="email">Escribe tu email</string>
    <string name="contrasena">Escribe tu contraseña</string>
    <string name="iniciar">Iniciar Sesión</string>
    <string name="consumible">Consumible</string>
    <string name="herramienta">Herramienta</string>
    //Fragments
    <string name="scroll">Scroll</string>
    <string name="anadir">Agregar producto</string>
    <string name="modificar">Modificar herramienta</string>
    <string name="consultar">Consultar producto</string>
    <string name="edicion_usuario"> Editar usuario </string>
    <string name="eliminar">Eliminar</string>
    <string name="inactivar">Inactivar</string>
    <string name="listar">Listar activos</string>
    <string name="listarina">Listar inactivos</string>
    <string name="creditos">Créditos</string>
    <string name="fragmentagregar">Añadir fragment</string>
    <string name="fragmentlistaractivos">Listar activos fragment</string>
    <string name="fragmentlistarinactivos">Listar inactivos fragment</string>
    <string name="agregaprod">Agregar producto</string>
    <string name="idprod">Agregar ID del producto</string>
    <string name="idprodbuscar">Buscar ID</string>
    <string name="botonbuscar">Buscar</string>
    <string name="nombreprod">Nombre producto</string>
    <string name="categoriaprod">Categorías herramientas</string>
    <string name="userherra">Herramientas</string>
    <string name="configuracion">Configuración</string>
    <string name="registros"> Registros </string>
    <string name="solicitudes"> Solicitudes </string>
    <string name="prestamos"> Préstamos </string>
    <string name="usuarios"> Usuarios </string>
    <string name="imagenprod">Imagen del producto</string>
    <string name="descripcionprod">Describe el producto</string>
    <string name="fotoprod">Tomar foto del producto</string>
    <string name="guardarprod">Guardar</string>
    <string name="modificarprod">Modificar</string>
    <string name="inicio">Inicio</string>
    <string name="headervideo">Inicio</string>
    <string name="textvideo">Este video explica el funcionamiento de la app</string>
    <string name="labelprod">Producto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registrar">Crear Cuenta</string>
    <string name="imagenusuario" />
    <string name="confirmarcontrasena">Confirmar contraseña</string>
    <string name="checkadmineditar">Convertir a administrador</string>
    //Strings para el menú del administrador
    <string name="admincategorias"> Categorías </string>
    <string name="adminusuarios"> Usuarios </string>
    <string name="adminregistros"> Registros </string>
    <string name="adminsolicitudes"> Solicitudes </string>
    <string name="adminconfiguracion"> Configuración </string>
    //Strings para el cardview de usuarios
    <string name="nombre_usuarios"> Usuario </string>
    <string name="nombre_herramienta"> Herramienta </string>
    <string name="boton_confirmar"> Confirmar </string>
    <string name="boton_cancelar"> Cancelar </string>
    <string name="boton_quitar"> Quitar </string>
    <string name="boton_editar"> Editar </string>
    <string name="boton_olvidepass"> ¿Olvidaste tu contraseña? </string>
    <string name="nuevacuenta"> ¿No tiene una cuenta? </string>
    //Strings para el cardview de categorías
    <string name="nombre_producto"> Nombre </string>
    <string name="desc_producto"> Desc </string>
    //Strings para menú de usuario
    <string name="usuarioprestamos"> Préstamos </string>
    <string name="usuariosolicitudes"> Solicitudes </string>
    <string name="usuarioconfiguracion"> Configuración </string>
    //Strings para el fragment de configuración
    <string name="configuracionNombre"> Ingresa el nuevo nombre </string>
    <string name="configuracionCorreo"> Ingresa el correo </string>
    <string name="configuracionPassword"> Ingresa la contraseña </string>
    <string name="configuracionConfirmarPass"> Confirma la contraseña </string>
    <string name="configuracionAceptar"> Aceptar </string>
    <string name="configuracionVer"> Ver </string>
    <string name="configuracionCancelar"> Cancelar </string>
    //Strings para fragment de registros
    <string name="registrosNombre"> Nombre </string>
    <string name="registrosDesc"> Descripción </string>
    <string name="registrosCantidad"> Cantidad </string>
    <string name="recuperar">Recuperar</string>
    //Strings de fargment herramientas
    <string name="nombreherramienta">Código</string>
    <string name="descherramienta">Descripción</string>
    <string name="cantidadherramienta">Cantidad</string>
    <string name="fotoherramienta">Foto Herramienta</string>
    <string name="headerherramienta">Agregar herramienta</string>
    <string name="Codigo">Codigo</string>
    <string name="title_activity_mapa">activity_mapa</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>