<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    app:cardElevation="6dp"
    app:cardUseCompatPadding="true"
    app:cardPreventCornerOverlap="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_producto"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:id="@+id/nombre_prodcategoria"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_producto"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:id="@+id/desc_prodcategoria"
            />
        <ImageView
            android:id="@+id/imagenCardview"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/nombre_herramienta"
            android:layout_marginStart="50dp"
            android:layout_marginTop="60dp"/>
        <Button
            android:id="@+id/btneditarcategoria"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginStart="240dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:text="@string/boton_editar"
            android:backgroundTint="?colorPrimaryVariant"
            android:textSize="7sp"
            app:icon="@drawable/ic_edit"/>

        <Button
            android:id="@+id/btneliminarcategoria"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginStart="240dp"
            android:layout_marginTop="75dp"
            android:layout_marginBottom="10dp"
            android:text="@string/boton_quitar"
            android:textSize="7sp"
            app:icon="@drawable/ic_delete"/>
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>