<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_configuracion">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbarconfiguracion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/colorPrimaryVariant"
                    app:title="@string/configuracion"/>
            </com.google.android.material.appbar.AppBarLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="25dp"
                app:endIconMode="clear_text"
                app:startIconContentDescription="@string/configuracionNombre"
                app:startIconDrawable="@drawable/ic_usuarios">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nombre_cliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/configuracionCorreo"
                    android:inputType="textPersonName"
                    tools:layout_editor_absoluteX="16dp" />

            </com.google.android.material.textfield.TextInputLayout>





            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                app:endIconMode="password_toggle"
                app:startIconContentDescription="@string/configuracionConfirmarPass"
                app:startIconDrawable="@drawable/ic_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmarpassword_cliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/configuracionConfirmarPass"
                    android:inputType="textPassword"
                    tools:layout_editor_absoluteX="16dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/headerubi"
                android:layout_marginTop="25dp"
                android:layout_marginStart="25dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="25dp"
                android:id="@+id/coordenadas"
                android:text="@string/coordenadas"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnconfiguracionAceptar"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/configuracionAceptar"
                    android:textSize="20sp"
                    app:icon="@drawable/ic_ok" />

                <Button
                    android:id="@+id/btnconfiguracionCancelar"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/configuracionCancelar"
                    android:textSize="20sp"
                    app:icon="@drawable/ic_cancela" />
            </LinearLayout>

        </LinearLayout>


    </ScrollView>
    <ProgressBar
        android:id="@+id/loadingConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />


</FrameLayout>