<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".nuevo_usuario">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbarconsultar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/colorPrimaryVariant"
                    app:title="@string/consultar"/>

            </com.google.android.material.appbar.AppBarLayout>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivFotodeUsuario"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/imagenusuario"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="25dp"
                    app:endIconMode="clear_text"
                    app:startIconContentDescription="@string/idprodbuscar"
                    app:startIconDrawable="@drawable/ic_id">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/idprodconsultar"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/usuario"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>



</FrameLayout>